fix for ia preview in dark mode

--- a/man.iatemplate/Contents/Resources/ia.css
+++ b/man.iatemplate/Contents/Resources/ia.css
@@ -1,3 +1,6 @@
 ﻿html {
   padding: 0 !important;
 }
+html.night-mode {
+  background: #222;
+}
